--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ionic-react-coffee-app",
+  "name": "ionic-ordering-app",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.7",
+    "@capacitor/ios": "^2.4.7",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,11 +17,14 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "ionicons": "^5.4.0",
+    "pullstate": "^1.22.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-iconly": "^2.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
